--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -2,14 +2,12 @@
 
 <li>
     <article class="post">
-        <a href="{% url "posts-detail-page" "the-mountains" %}">
-            <img src="{% static 'blog/images/mountain.jpeg' %}" alt="Mountain Hiking" />
+        <a href="{% url "posts-detail-page" post.slug %}">
+            <img src="{% static 'blog/images/'|add:post.image %}" alt={{ post.title }} />
             <div class="post__content">
-                <h3>Mountain Hiking</h3>
+                <h3>{{ post.title }}</h3>
                 <p>
-                    There is nothing like the view when hiking in the mountains!
-                    And i was'nt even prepared for
-                    what happened whilst I was enjoying the view!
+                    {{ post.excerpt }}
                 </p>
             </div>
         </a>
