--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %} This Post Title {% endblock %}
+{% block title %} {{ post.title }} {% endblock %}
 
 {% block css_files %}
 <link rel="stylesheet" href="{% static 'blog/post-detail.css' %}" />
@@ -10,20 +10,19 @@
 
 {% block content %}
 <section id="summary">
-    <h2>Post Title</h2>
+    <h2>{{ post.title }}</h2>
     <article>
-        <img src="{% static 'blog/images/mountain.jpeg' %}" alt="Post Tile" />
-        <address>By Prakhar</address>
+        <img src="{% static 'blog/images/'|add:post.image %}" alt="{{ post.title }}" />
+        <address>By {{ post.author }}</address>
         <div>
-            Last updated on <time>July 10th</time>
+            Last updated on <time>{{ post.date|date:"D d M Y" }}</time>
         </div>
     </article>
 </section>
 
 <main>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure vero deserunt magni eaque provident soluta, totam
-        nihil labore veniam atque sint mollitia exercitationem eveniet eos consequatur ullam velit suscipit! Eligendi.
+        {{ post.content }}
     </p>
 </main>
 {% endblock %}
